--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.1.3",
     "jspm": "^0.16.6",
