--- a/sample/package.json
+++ b/sample/package.json
@@ -11,12 +11,14 @@
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
       "font-awesome": "npm:font-awesome@^4.4.0",
       "gooy/aurelia-markdown": "github:gooy/aurelia-markdown@^0.0.3",
+      "hammer": "github:hammerjs/hammer.js@^2.0.6",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "materialize": "github:dogfalo/materialize@0.96.1",
       "showdown": "github:showdownjs/showdown@1.3.0",
       "showdownjs/showdown": "github:showdownjs/showdown@^1.3.0",
       "systemjs/plugin-css": "github:systemjs/plugin-css@^0.1.17",
-      "twbs/bootstrap": "github:twbs/bootstrap@3.3.5"
+      "twbs/bootstrap": "github:twbs/bootstrap@3.3.5",
+      "velocity": "github:julianshapiro/velocity@^1.2.3"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
