--- a/sample/package.json
+++ b/sample/package.json
@@ -12,6 +12,7 @@
       "font-awesome": "npm:font-awesome@^4.4.0",
       "gooy/aurelia-markdown": "github:gooy/aurelia-markdown@^0.0.3",
       "hammer": "github:hammerjs/hammer.js@^2.0.6",
+      "jquery": "npm:jquery@^2.2.0",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "materialize": "github:dogfalo/materialize@0.96.1",
       "showdown": "github:showdownjs/showdown@1.3.0",
